@startuml
enum WallsState {
    LEFT= 1,
    RIGHT= 2,
    TOP= 4,
    BOTTOM= 8,
    VISITED= 128,
}
class Position <<struct>> {
    + X : int
    + Y : int
}
class Neighbour <<struct>> {
}
class MazeGenerator {
    Start() : void
    Update() : void
    + {static} GenerateMaze(mazeWidth:int, mazeHeight:int) : WallsState[,]
}
Neighbour --> "Position" Position
Neighbour --> "SharedWall" WallsState
MonoBehaviour <|-- MazeGenerator
@enduml
